Añadido cooldown de dasheo
Añadido un cooldown de dasheo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Kastalia.sln"
+    "dotnet.defaultSolution": "Kastalia-Proyecto-Videojuegos-UPV-2025-.sln"
 }
